# copier-template-tester

./: .calcipy.json  .copier-answers.yml  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .ruff.toml  .sourcery.yaml  .tool-versions  404.html  CNAME  LICENSE  README.md  _poetry_to_uv_migration.py  dodo.py  gen_ref_nav.py  index.html  mise.toml  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  run  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup/: action.yml
.github/workflows/: ci_pipeline.yml  codeql-analysis.yml  labeler.yml  publish.yml  update_docs.yml  upgrade-dependencies.yml  usage_test.yml
copier_template_tester/: __init__.py  _answers_stabilizer.py  _config.py  _git_utils.py  _output_reporter.py  _pre_commit_support.py  _runtime_type_check_setup.py  _template_config.py  _temporal_summary.py  _vcs_utils.py  _write_output.py  main.py  plain_printer.py  temporal.py
docs/: DESIGN_FUTURE_FEATURES.md  DESIGN_TEMPORAL_TESTING.md  README.md  TEMPORAL_TESTING.md  gen_ref_nav.py
docs/Advanced_Documentation/: index.html
docs/CHANGELOG/: index.html
docs/CODE_TAG_SUMMARY/: index.html
docs/DEVELOPER_GUIDE/: index.html
docs/STYLE_GUIDE/: index.html
docs/docs/: CHANGELOG.md  CODE_TAG_SUMMARY.md  DEVELOPER_GUIDE.md  STYLE_GUIDE.md
docs/superpowers/plans/: 2026-05-24-test-case-filter.md  2026-07-04-test-case-filter.md
docs/superpowers/specs/: 2026-05-06-test-case-filter-design.md
modules/copier_template_tester/_code_diagrams/: index.html
reference/SUMMARY/: index.html
reference/copier_template_tester/: index.html
reference/copier_template_tester/_config/: index.html
reference/copier_template_tester/_pre_commit_support/: index.html
reference/copier_template_tester/_write_output/: index.html
reference/copier_template_tester/main/: index.html
scripts/: check_imports.py
search/: search_index.json
superpowers/plans/2026-05-24-test-case-filter/: index.html
superpowers/plans/2026-07-04-test-case-filter/: index.html
superpowers/specs/2026-05-06-test-case-filter-design/: index.html
tests/: __init__.py  configuration.py  conftest.py  fixtures.py  helpers.py  test_config.py  test_main.py  test_output_reporter.py  test_pre_commit_support.py  test_temporal.py  test_vcs_utils.py  test_write_output.py  test_zz_copier_template_tester.py
tests/data/ci_usage_test/: copier.yaml  ctt.toml
tests/data/ci_usage_test/template/: README.md
tests/data/copier_demo/: .gitattributes  copier.yml  ctt.toml
tests/data/copier_demo/.ctt/no_all/: .copier-answers.testing_no_all.yml  README.md  script.py
tests/data/copier_demo/.ctt/pre_tasks/: .copier-answers.pre_tasks.yml  README.md  script.py
tests/data/copier_demo/.ctt/prepend_tasks/: .copier-answers.prepend_tasks.yml  script.py
tests/data/copier_demo/.ctt/skip_tasks/: .copier-answers.skip_tasks.yml  script.py
tests/data/copier_demo/template_dir/: README.md.jinja  script.py.jinja  {{ _copier_conf.answers_file }}.jinja
tests/data/copier_include/: copier.yml  ctt.toml
tests/data/copier_include/.ctt/copier_include/: .copier-answers.with_include.yml  script.py
tests/data/copier_include/common-questions/: python-project.yml  web-app.yml
tests/data/copier_include/shared-conf/: common.1.yml  common.2.yml
tests/data/copier_include/template_dir/: script.py.jinja
tests/data/failing_task_demo/: copier.yaml  ctt.toml
tests/data/failing_task_demo/template/: README.md
tests/data/no_answers_file_demo/: copier.yml  ctt.toml
tests/data/no_answers_file_demo/.ctt/no_answers_file/: README.md
tests/data/no_answers_file_demo/no_answers_file/: README.md.jinja
tests/data/no_copier_config/: ctt.toml
tests/data/no_exclude/: README.md  copier.yml  ctt.toml
tests/data/no_subdir/: copier.yml  ctt.toml  out.jinja
tests/data/no_subdir/.ctt/no_subdir/: ctt.toml
tests/data/no_subdir_nor_exclude/: copier.yml  ctt.toml
tests/data/no_subdir_nor_exclude/.ctt/no_subdir_nor_exclude/: README.md
